tests/compile_fail/machine_module/not_on_module.stderr
error: expected `mod`
 --> tests/compile_fail/machine_module/not_on_module.rs:5:5
  |
5 |     struct Module {}
  |     ^^^^^^
